# c3b-template

./: CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile-multistage  README.adoc  job_monitor.sh  job_myapp.sh
.devcontainer/: Dockerfile  devcontainer.json  install-docker.sh
.github/workflows/: ci.yml  deploy.yml
bench_solutions/ex1/: codespace_machine.py  codespace_specs.json  fibonacci_benchmark.json
bench_solutions/ex2/: karolina.json  matrixvector_benchmark.json  matrixvector_plots.json
examples/: CMakeLists.txt  matrixvector.cpp
myapp/: CMakeLists.txt
